--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 * {
   box-sizing: border-box;
 }
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Poppins", sans-serif;
   margin: 0;
 }
 .fixedheader {
@@ -10,7 +11,7 @@ body {
   width: 100%;
 }
 main {
-  padding-top: 54px;
+  padding-top: 30px;
 }
 
 .main-header {
@@ -229,17 +230,19 @@ main {
 #product-overview > div {
   width: 100%;
   height: 100%;
-  padding: 10px;
+  padding: 20px 10px;
   background: rgba(0, 0, 0, 0.8);
+  display: flex;
 }
-
+#product-overview > div > div {
+  align-self: center;
+  margin: auto;
+}
 .section-title {
   color: #262927;
 }
-
 #product-overview h1 {
   color: white;
-  font-family: "Anton", sans-serif;
   text-align: center;
   font-size: 3rem;
   margin-top: 5rem;
@@ -249,7 +252,6 @@ main {
   text-align: center;
   font-size: 2rem;
 }
-
 .about {
   width: 100%;
   height: 100vh;
@@ -271,7 +273,6 @@ main {
   height: 20rem;
   border-radius: 50%;
 }
-
 #stick-around {
   background: #2ddf5c;
   margin-top: 80px;
@@ -300,4 +301,60 @@ main {
 .sticking {
   text-align: center;
   font-size: 20px;
+}
+.about_essay p {
+  line-height: 2em;
+}
+.main-nav__items li:nth-child(2) {
+  display: none;
+}
+.side-bar {
+  display: none;
+}
+
+
+@media screen and (max-width: 900px) {
+  .about {
+    display: block;
+    padding: 50px 20px;
+    text-align: center;
+  }
+  .about_pic {
+    width: 100%;
+  }
+  .about_essay {
+    width: 100%;
+    font-size: 1rem;
+  }
+  .main-nav__items li:nth-child(2) {
+    display: inline-block;
+  }
+  .main-nav__items li:nth-child(n+3) {
+    display: none;
+  }
+  .main-nav__items li img {
+    padding: 0;
+  }
+  .side-bar {
+    display: block;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 100%;
+    background: #272727;
+    transition: left ease-in 0.5s;
+  }
+  .side-bar li {
+    list-style: none;
+    padding: 20px 0;
+  }
+  .side-bar a {
+    text-decoration: none;
+    color: #fff;
+  }
+  .cancel_button {
+    width: 30px;
+    margin: 30px 30px 30px 80%;
+  }
 }
